# Cocktail_Mania

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/Cocktail_Mania/: Cocktail_Mania.py  __init__.py
tests/: test_Cocktail_Mania.py
