[tool.poetry]
name = "Cocktail_Mania"
version = "0.1.1"
description = "A package that tells all the information you want to know about the cocktail!"
authors = ["Huan Sun"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
